--- a/basic/index.html
+++ b/basic/index.html
@@ -11,6 +11,13 @@
         <header>
             <h1>Javascript</h1>
         </header>
+        <body>
+            <div onClick="selection('Dayakar')">Dayakar</div>
+            <div onClick="selection('Sandeep')">Sandeep</div>
+            <div onClick="selection('Praveen')">Praveen</div>
+            <div onClick="selection('Raju')">Raju</div>
+            
+        </body>
     </div>
     <!-- <script src="./script.js"></script> -->
      <script src="./functions.js"></script>
